refact: modificado rotas para pt-br
