# src/routes/usuarioRoute.js
@@ -13,22 +13,26 @@ const {
 const routes = express.Router();
 
 routes.post(
-  '/api/users/signup',
+  '/api/usuario/signup',
   verifyApiKey,
   createUserValidator,
   validateData,
   userController.createUser,
 );
 routes.post(
-  '/api/users/login',
+  '/api/usuario/login',
   verifyApiKey,
   loginValidator,
   validateData,
   userController.login,
 );
-routes.get('/api/users/:email', verifyApiKey, userController.findUserByEmail);
-routes.get('/api/users', verifyApiKey, userController.findAllUsers);
-routes.put('/api/users/:email', verifyApiKey, userController.atualizaDadosUser);
-routes.delete('/api/users', verifyApiKey, userController.deleteUser);
+routes.get('/api/usuario/:email', verifyApiKey, userController.findUserByEmail);
+routes.get('/api/usuario', verifyApiKey, userController.findAllUsers);
+routes.put(
+  '/api/usuario/:email',
+  verifyApiKey,
+  userController.atualizaDadosUser,
+);
+routes.delete('/api/usuario', verifyApiKey, userController.deleteUser);
 
 module.exports = routes;
